--- a/public/index.html
+++ b/public/index.html
@@ -15,4 +15,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBP1oh-8P2tbt3AV2X3KwXttpxtn8wRhVU&callback=initMap"
+  type="text/javascript"></script>
 </html>
